tests/expectations/compiler/integers/i128/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'i128'
    --> compiler-test:4:15
     |
   4 |     let i = 1 i128;
     |               ^^^^
